# iu-lms

./: .gitignore  BUILD.bazel  WORKSPACE
.github/workflows/: main.yml  release.yml
courses/: BUILD.bazel  db.py  run.py  service.py  settings.py
courses/k8s/: courses.deployment.yaml  courses.service.yaml  db.service.yaml  db.statefulset.yaml
courses/models/: access.py  course.py
courses/proto/: BUILD.bazel  courses.proto
gateway/: BUILD.bazel  app.py  deployment.yaml  run.py  settings.py
gateway/dependencies/: auth.py  cache.py  courses.py  page_flags.py  s3.py  sessions.py  tasks.py  user.py
gateway/k8s/: deployment.yaml  service.yaml
gateway/routers/: courses.py  reports.py  tasks.py  users.py
gateway/schemas/: assignment.py  attempt.py  course.py  page.py  review.py  task.py  user.py
gateway/schemas/reports/: academic_performance.py
sessions/: BUILD.bazel  db.py  mail.py  password.py  run.py  service.py  settings.py
sessions/k8s/: db.service.yaml  db.statefulset.yaml  sessions.deployment.yaml  sessions.service.yaml
sessions/models/: user.py
sessions/proto/: BUILD.bazel  auth.proto  sessions.proto  user.proto
tasks/: BUILD.bazel  db.py  run.py  service.py  settings.py
tasks/k8s/: db.service.yaml  db.statefulset.yaml  tasks.deployment.yaml  tasks.service.yaml
tasks/models/: assignment.py  attempt.py  review.py  task.py
tasks/proto/: BUILD.bazel  assignment.proto  attempt.proto  review.proto  task.proto  tasks.proto
tasks/repository/: assignment.py  task.py
thrid_party/: requirements.txt
