load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@third_party//:requirements.bzl", "requirement")

py_library(
    name = "tasks",
    srcs_version = "PY3",
    srcs = [
        "__init__.py",
        "db.py",
        "service.py",
        "settings.py",
        "models/__init__.py",
        "models/assignment.py",
        "models/attempt.py",
        "models/review.py",
        "models/task.py",
        "repository/__init__.py",
        "repository/assignment.py",
        "repository/task.py",
    ],
    deps = [
        requirement("pydantic"),
        requirement("SQLAlchemy"),
        requirement("pg8000"),
        "//tasks/proto:tasks_py_pb2",
        "//tasks/proto:tasks_py_pb2_grpc",
    ]
)

py_binary(
    name = "bin",
    srcs_version = "PY3",
    main = "run.py",
    srcs = [
        "run.py",
    ],
    deps = [
        requirement("grpcio-health-checking"),
        ":tasks",
    ],
    data = glob([".env"]),
)

py3_image(
    name = "image",
    main = "run.py",
    srcs = [
        "run.py",
    ],
    deps = [
        requirement("grpcio-health-checking"),
        ":tasks",
    ],
    base = "//:py3_base_image",
)

k8s_deploy(
    name = "deployment",
    kind = "deployment",
    template = "k8s/tasks.deployment.yaml",
    images = {
        "cr.yandex/crpte7n56g4f5meeem22/iu-lms/tasks": ":image",
    },
)

k8s_deploy(
    name = "service",
    kind = "service",
    template = "k8s/tasks.service.yaml",
)

k8s_deploy(
    name = "db",
    kind = "statefulset",
    template = "k8s/db.statefulset.yaml",
)

k8s_deploy(
    name = "db_service",
    kind = "service",
    template = "k8s/db.service.yaml",
)

k8s_objects(
    name = "production",
    objects = [
        ":deployment",
        ":service",
        ":db",
        ":db_service",
    ],
)
