package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpclib_library")

proto_library(
    name = "proto",
    srcs = [
        "auth.proto",
        "sessions.proto",
        "user.proto",
    ],
)

python_grpclib_library(
    name = "sessions_py_grpc",
    protos = [
        ":proto",
    ],
    output_mode = "NO_PREFIX",
    prefix_path = "../..",
)
